--- a/css/style.css
+++ b/css/style.css
@@ -225,45 +225,6 @@ hr {
 	border: 1px solid black;
 }
 
-form {
-	text-align: center;
-}
-
-
-input, textarea {
-	border-style: none;
-	margin: 10px;
-	padding: 5px 10px;
-	font-family: Montserrat;
-	font-size: 20px;
-	border-radius: 7px;
-	width: 50%;
-	max-width: 75%;
-}
-
-.message{
-	min-height: 100px;
-	max-height: 200px;
-}
-
-
-button {
-	border-style: none;
-	border: 2px solid #506e7a;
-	margin: 10px;
-	padding: 10px 20px;
-	font-family: Montserrat;
-	background-color: #506e7a;
-	color: #b3d9ff;
-	font-size: 20px;
-	border-radius: 7px;
-}
-
-button:hover {
-	background-color: transparent;
-	font-weight: bold;
-	color: #506e7a;
-}
 
 .projects {
 	position: relative;
@@ -379,4 +340,69 @@ img {
 	width: 50%;
 	margin: 0 auto;
 	border-radius: 50%;
+}
+
+.contact-section{
+	border-top: 1px solid black;
+	background-color: #F0F0F0;
+}
+
+form {
+	text-align: center;
+}
+
+
+input, textarea {
+	border-style: none;
+	border: 1px solid black;
+	margin: 10px;
+	padding: 5px 10px;
+	font-family: Montserrat;
+	font-size: 20px;
+	border-radius: 7px;
+	width: 50%;
+	max-width: 75%;
+}
+
+
+button {
+	border-style: none;
+	border: 1px solid black;
+	margin: 10px;
+	padding: 10px 20px;
+	font-family: Montserrat;
+	background-color: #b7d8e1;
+	font-size: 20px;
+	border-radius: 7px;
+}
+
+button:hover {
+	background: rgba(183, 216, 225, 0.5);
+	font-weight: bold;
+}
+
+.contact-information{
+	text-align: center;
+	width: 100%;
+}
+
+.contact-information svg{
+	display: inline-block;
+	vertical-align: middle;
+}
+
+.contact-information  h2{
+	display: inline-block;
+	vertical-align: middle;
+}
+
+.contact-information  a{
+	text-decoration: none;
+	color: black;
+}
+
+.contact-method {
+	display: inline-block;
+	margin: 0 auto;
+	padding: 0 2%;
 }
