--- a/css/style.css
+++ b/css/style.css
@@ -327,6 +327,12 @@ img {
 	margin: 0 auto;
 }
 
+.about-text a {
+	text-decoration: none;
+	color: black;
+	font-weight: bold;
+}
+
 .profile {
 	margin-left: 5%;
 	display: inline-block;
