--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ ul#navigation-bar > li a:hover {
 	background-size: 100%;
 	background-repeat: no-repeat;
 	margin: 0;
+	border-bottom: 1px solid black;
 }
 
 #introduction {
@@ -230,7 +231,6 @@ hr {
 	position: relative;
 	display: block;
 	background-color: #F0F0F0;
-	border-top: 1px solid black;
 }
 
 .section-title{
