--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@
 	box-sizing: border-box;
 }
 
+body {
+	margin: 0;
+	padding: 0;
+}
+
 body, html {
 	font-family: Montserrat;
 	background-color: #f2f2f2;
