--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ body, html {
 }
 
 ul#navigation-bar > li {
-	display: inline;
+	display: inline-block;
 }
 
 ul#navigation-bar > li a {
@@ -106,10 +106,8 @@ ul#navigation-bar > li a:hover {
 }
 
 #titles li a:hover{
-	font-weight: bold;
+	text-decoration: underline;
 }
-
-
 
 .timeline {
 	position: relative;
